# cpphardway

./: .gitignore  C++_extern_code_tutorial_Timestamp_chapter.txt  CPrgm_caleb_10hrs_Timestamps.txt  README.md
Gakwaya-CPPClass-Source-Code/: course_chapters.txt
Gakwaya-CPPClass-Source-Code/14.References/: warmu_ptr.cpp
Gakwaya-CPPClass-Source-Code/15.CharacterManipulationAndStrings/: warmu_chr.cpp
c_hardway_exercises/exercise1/: CMakeLists.txt  exercise1.c  format_specifier.txt
c_hardway_exercises/exercise10/: CMakeLists.txt  cliargs.py  exercise10.c
c_hardway_exercises/exercise11/: CMakeLists.txt  array_ops.excalidraw  array_pointer_ops.excalidraw  exercise11.c
c_hardway_exercises/exercise12/: CMakeLists.txt  exercise12.c
c_hardway_exercises/exercise13/: CMakeLists.txt  exercise13.c
c_hardway_exercises/exercise14/: CMakeLists.txt  exercise14.c
c_hardway_exercises/exercise15/: CMakeLists.txt  exercise15.c
c_hardway_exercises/exercise16/: CMakeLists.txt  exercise16.c  header_files_n_more.excalidraw
c_hardway_exercises/exercise17/: CMakeLists.txt  exercise17.c
c_hardway_exercises/exercise18/: CMakeLists.txt  exercise18.c
c_hardway_exercises/exercise19/: CMakeLists.txt  dbg.h  exercise19.c
c_hardway_exercises/exercise2/: CMakeLists.txt
c_hardway_exercises/exercise20/: CMakeLists.txt  comprehensive_operators.c
c_hardway_exercises/exercise21/: CMakeLists.txt  cautions_tofollow.txt  exercise21.c  exercise21.h  exercise21main.c
c_hardway_exercises/exercise21/cmake-build/: Makefile
c_hardway_exercises/exercise22/: CMakeLists.txt  exercise22.c
c_hardway_exercises/exercise22/cmake-build/: Makefile
c_hardway_exercises/exercise23/: CMakeLists.txt  exercise23.c
c_hardway_exercises/exercise24/: CMakeLists.txt  exercise24.c
c_hardway_exercises/exercise27/: CMakeLists.txt  exercise27.c
c_hardway_exercises/exercise28/: LICENSE  Makefile  README.md
c_hardway_exercises/exercise29/: dbg.h  exercise29.c  libexercise29.c
c_hardway_exercises/exercise3/: CMakeLists.txt  escape_sequences.txt  exercise3.c
c_hardway_exercises/exercise7/: CMakeLists.txt  DataType_withSize.txt  exercise7.c
c_hardway_exercises/exercise8/: CMakeLists.txt  exercise8.c
c_hardway_exercises/exercise9/: CMakeLists.txt  exercise9.c
c_hardway_exercises/macro_explore/: CMakeLists.txt  macrowork.c
c_hardway_exercises/practice_fread/: CMakeLists.txt  fread_prac.c  g4g.txt
c_hardway_exercises/printing_bits/: CMakeLists.txt  bitprinter.c  simpler_bitprinter.c
cpp_debug/: CMakeLists.txt  gdbtest.cpp
cpp_debug/cmake-build/: Makefile
cpp_ml_ai_inference/: libraries_support.txt
cpp_practice_files/: abstractiion.cpp  accessing_array_elements.cpp  account_manipulation.cpp  advanced_functions.cpp  array_intro.cpp  artithemetic_ops.cpp  brocode_chapters.txt  calculator_withswitch.cpp  caleb_chapters.txt  card_verifier.cpp  const_intro.cpp  doubles_n_more.cpp  dynamicmemory_allocation.cpp  enum_in_action.cpp  file_operations.cpp  fillingup_arrays.cpp  hello_printer.cpp  ifStmt.cpp  intro_functions.cpp  introducing_typedef.cpp  looping_for.cpp  math_fn_intro.cpp  multi_conditionals.cpp  namespaces.cpp  nullptr_intro.cpp  object_oriented_entry.cpp  outfile_prac.txt  playing_withMemory.cpp  playing_withpointers.cpp  practice_calc_hypotnuse.cpp  pseudo_random.cpp  quiz_code.cpp  recursive_loops.cpp  sorting_arrays.cpp  structs_&_funcStructs.cpp  switching.cpp  switching_char.cpp  template_functions.cpp  ternerary_grade.cpp  twod_array.cpp  (+4 more)
cpp_practice_files/archiver/: CMakeLists.txt
cpp_practice_files/archiver/cmake-build/: Makefile
cpp_practice_files/cliargs/: CMakeLists.txt  cliargs.cpp
cpp_practice_files/json_api/: CMakeLists.txt  example.json  json_api_req.cpp
cpp_practice_files/practice_cmake/: CMakeLists.txt  CMakeLists00.txt  CMakeLists01.txt  adder.cpp  adder.h  useadder.cpp
cpp_practice_files/practice_cmake/cmake-build/: Makefile  cmake_install.cmake
cpp_practice_files/practicing_make/: est  quotes.h  quotes_utils.cpp  quoting_quotes.cpp
cpp_practice_files/trim/: CMakeLists.txt  trim.cpp
cpp_template_aicoder/: rooster
cpp_template_wsl/: rooster
meta_clarifications/: bitset.txt  c_strings  compile_run_times  const_constinit_constexpr  ctime_cstdlib  declare_initialize_assign  initialization_types  iomanip.txt  iostream.txt  size_tClarified  std_namespaces  stdlib.txt
programmers57Exercises/: counting_chars.cpp  quoting_quotes.cpp  saying_hello.cpp
programmers57Exercises/area_calculator/: CMakeLists.txt  area_calculator.cpp
programmers57Exercises/bac/: CMakeLists.txt  bld_alcalc.cpp
programmers57Exercises/currency_convertor/: CMakeLists.txt  currency_converter.cpp
programmers57Exercises/exercise19/: CMakeLists.txt  exercise19.cpp
programmers57Exercises/exercise20/: CMakeLists.txt  CMakeLists00.txt  exercise20.cpp  exercise20.hpp
programmers57Exercises/exercise21/: CMakeLists.txt  exercise21.cpp
programmers57Exercises/exercise22/: CMakeLists.txt  exercise22.cpp
programmers57Exercises/exercise23/: CMakeLists.txt  exercise23.cpp
programmers57Exercises/exercise24/: CMakeLists.txt  exercise24.cpp  exercise24.h  exercise24main.cpp
programmers57Exercises/exercise25/: CMakeLists.txt  exercise25.cpp  pass_tester.cpp  utils.cpp  utils.h
programmers57Exercises/exercise26/: CMakeLists.txt  exercise26.cpp  utils.cpp  utils.h
programmers57Exercises/exercise27/: CMakeLists.txt  exercise27.cpp
programmers57Exercises/exercise28/: CMakeLists.txt  exercise28.cpp
programmers57Exercises/exercise29/: CMakeLists.txt  exercise29.cpp
programmers57Exercises/exercise30/: CMakeLists.txt  exercise30.cpp
programmers57Exercises/exercise31/: CMakeLists.txt  exercise31.cpp
programmers57Exercises/exercise32/: CMakeLists.txt  exercise32.cpp
programmers57Exercises/remote_exec/: CMakeLists.txt  Makefile  Makefile_RemoteExecute  Makefile_RemoteRetrieve  README.md  main.cpp
warmup_files/: july11th.cpp  july15th.cpp  july16th.cpp  may13thWarmup.cpp  may17thWarmup.cpp  tempCodeRunnerFile.cpp  warmup_pointer_dymem.cpp  warmup_pointers.c  warmup_pointers.cpp
(+131 files in other folders)
